--- a/instances/ff52aa26-9393-4021-91e4-e0a9c6c1343e/bindings/205bcedf-f169-4ec5-b73e-b7edca6fa122/binding.yml
+++ b/instances/ff52aa26-9393-4021-91e4-e0a9c6c1343e/bindings/205bcedf-f169-4ec5-b73e-b7edca6fa122/binding.yml
@@ -6,7 +6,7 @@ planId: "B17F389D-7ECD-4522-98AF-5E2289B68A97"
 originatingIdentity: !<PlatformContext>
   platform: "meshmarketplace"
   user_id: "75606cd5-2251-4134-9e46-1604f001312b"
-  user_euid: "fzieger@meshcloud.io"
+  user_euid: "fzieger@example.com"
 parameters: {}
 bindResource:
   tenant_id: "opendevstack-develop-9gj"
