--- a/instances/ff52aa26-9393-4021-91e4-e0a9c6c1343e/bindings/205bcedf-f169-4ec5-b73e-b7edca6fa122/status.yml
+++ b/instances/ff52aa26-9393-4021-91e4-e0a9c6c1343e/bindings/205bcedf-f169-4ec5-b73e-b7edca6fa122/status.yml
@@ -1,3 +1,2 @@
----
-status: "in progress"
-description: "preparing binding deletion"
+"description": "Updated binding successfully"
+"status": "succeeded"
