OSB API: Marked Service instance ff52aa26-9393-4021-91e4-e0a9c6c1343e as deleted.

--- a/instances/ff52aa26-9393-4021-91e4-e0a9c6c1343e/status.yml
+++ b/instances/ff52aa26-9393-4021-91e4-e0a9c6c1343e/status.yml
@@ -1,2 +1,3 @@
-"description": "Updated instance successfully"
-"status": "succeeded"
+---
+status: "in progress"
+description: "preparing service deletion"
